@@ -30,10 +30,10 @@ open-new-window=<Control-Key-n>
 open-window-from-file=<Control-Key-o>
 plain-newline-and-indent=<Control-Key-j>
 print-window=<Control-Key-p>
-redo=<Control-Shift-Key-z>
+redo=<Control-Shift-Key-Z>
 remove-selection=<Key-Escape>
-save-copy-of-window-as-file=<Alt-Shift-Key-s>
-save-window-as-file=<Control-Shift-Key-s>
+save-copy-of-window-as-file=<Alt-Shift-Key-S>
+save-window-as-file=<Control-Shift-Key-S>
 save-window=<Control-Key-s>
 select-all=<Control-Key-a>
 toggle-auto-coloring=<Control-Key-slash>
@@ -78,7 +78,7 @@ open-window-from-file=<Control-Key-x><Control-Key-f>
 plain-newline-and-indent=<Control-Key-j>
 print-window=<Control-x><Control-Key-p>
 python-docs=<Control-Key-h>
-python-context-help=<Control-Shift-Key-h>
+python-context-help=<Control-Shift-Key-H>
 redo=<Alt-Key-z> <Meta-Key-z>
 remove-selection=<Key-Escape>
 save-copy-of-window-as-file=<Control-Key-x><Control-Key-y>
@@ -128,9 +128,9 @@ open-new-window=<Command-Key-n>
 open-window-from-file=<Command-Key-o>
 plain-newline-and-indent=<Control-Key-j>
 print-window=<Command-Key-p>
-redo=<Shift-Command-Key-z>
+redo=<Shift-Command-Key-Z>
 remove-selection=<Key-Escape>
-save-window-as-file=<Shift-Command-Key-s>
+save-window-as-file=<Shift-Command-Key-S>
 save-window=<Command-Key-s>
 save-copy-of-window-as-file=<Option-Command-Key-s>
 select-all=<Command-Key-a>
